# social_navigation

./: README.md
keep_in_proxemics/: CMakeLists.txt  package.xml
keep_in_proxemics/include/keep_in_proxemics/: flood_searcher_node.h
keep_in_proxemics/launch/: flood_searcher.launch  map_server_robot_costmap.launch  social_elevator_navigation.launch
keep_in_proxemics/maps/: local.yaml  person.pgm  person.yaml
keep_in_proxemics/src/: flood_searcher_node.cpp
keep_in_proxemics/src/utils/: people_remapper_node.cpp
keep_in_proxemics_msgs/: CMakeLists.txt  package.xml
keep_in_proxemics_msgs/srv/: SearchRobotPosition.srv
map_server/: CMakeLists.txt
map_server/src/: image_loader.cpp  main.cpp  map_saver.cpp
navigation_layers/social_navigation_layers/: CMakeLists.txt
navigation_layers/social_navigation_layers/cfg/: ProxemicLayer.cfg
navigation_layers/social_navigation_layers/include/social_navigation_layers/: proxemic_layer.h
navigation_layers/social_navigation_layers/src/: proxemic_layer.cpp
navigation_layers/social_navigation_layers_msgs/: CMakeLists.txt  package.xml
navigation_layers/social_navigation_layers_msgs/srv/: StimatedPeopleGoal.srv
social_navigation/: CMakeLists.txt  package.xml
social_navigation/launch/: map_server_robot_costmap.launch  social_navigation_actions.launch
social_navigation/maps/: local.pgm
social_navigation/pddl/: actions.pddl  predicates.pddl
social_navigation/src/actions/: RP_proxemic_move.cpp  RP_proxemic_move.h  RP_social_move.cpp  RP_social_move.h
social_navigation/src/utils/: laser_fake_creator_node.cpp  people_remapper_node.cpp
