<?xml version="1.0"?>
<package format="2">
  <name>keep_in_proxemics</name>
  <version>0.0.0</version>
  <description>The keep_in_proxemics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jgines@todo.todo">jgines</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>keep_in_proxemics_msgs</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>navfn</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>keep_in_proxemics_msgs</build_export_depend>
  <build_export_depend>people_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>navfn</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>keep_in_proxemics_msgs</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>navfn</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
